# ChangeLog for net-nds/389-ds-base
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.2.4/0001-configure.ac-genrtoo_brand.patch,
  +389-ds-base-1.2.4.ebuild:
  version bump

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.2.2/configure.ac.patch, 389-ds-base-1.2.2.ebuild,
  -files/configure.ac.patch:
  move 1.2.2 patches to dir

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.2.3/0001-configure.ac-genrtoo_brand.patch,
  389-ds-base-1.2.3.ebuild:
  add brand patch

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.2.ebuild, +389-ds-base-1.2.3.ebuild:
  version bump

  24 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  files/configure.ac.patch:
  fix configure patch - branding

  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.2.ebuild:
  add require depend nss[utils]

  05 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> -files/bug435774.patch,
  389-ds-base-1.2.2.ebuild, -files/bug439829.patch,
  +files/configure.ac.patch, metadata.xml:
  fix 1.2.2 version ebuild

  02 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-ds-base-1.2.2.ebuild:
  add new version

  31 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.1-r1.ebuild:
  add winsync-plugin hesder link

  21 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.1-r1.ebuild:
  add ~amd64

  15 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-ds-base-1.2.1.ebuild:
  remove old ebuild

*389-ds-base-1.2.1-r1 (15 Aug 2009)

  15 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> +files/bug435774.patch,
  +389-ds-base-1.2.1-r1.ebuild, +files/bug439829.patch, +files/dirsrv.confd,
  +files/dirsrv.initd:
  rewrite ebuild,new revision

*389-ds-base-1.2.1 (14 Aug 2009)

  14 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-ds-base-1.2.1.ebuild, +metadata.xml:
  add new ebuild
