@@ -10,6 +10,6 @@ DIST 389-ds-base-1.2.4.tar.bz2 2777673 RMD160 098692cf1f935acabf35e0a4de23803509
 EBUILD 389-ds-base-1.2.1-r1.ebuild 2129 RMD160 3081369e06b4128ab696aa1881f166d25bd0203a SHA1 b59aace7e7bb9517ac540f76ca9ddb473c4c2672 SHA256 d4e3677d0cbb505ee352089d3e0c741ea0ab196ce41ed068f623eec4aa7bef58
 EBUILD 389-ds-base-1.2.2.ebuild 2319 RMD160 d3f32ba4a3753abcbea75f9e4e92f8441c8d9921 SHA1 08d064e9c8a33a28c4a47f046cefe2b460ec8e96 SHA256 c3844cafe2851400c7ee19f606dac64a28655ae1d16a9caddf49140a797be536
 EBUILD 389-ds-base-1.2.3.ebuild 2482 RMD160 03039d9bdc305c21ea285a35dc3dd61ca22924f9 SHA1 b6d103ba82b54627e6ed14171f3ec5f97bb07ceb SHA256 35414dc5703c464b758d3fb52656333313f9011a179014c0c0256a5b84d8070e
-EBUILD 389-ds-base-1.2.4.ebuild 2521 RMD160 8e5bddcafd8bfcd52896c5368b76d51502287722 SHA1 e367c0b22d7dff0152db5406ab49faa73725da9c SHA256 bb88acea53449785b1dd54ecc1dddc344a64befe45acec9e94b4057bd270deb6
-MISC ChangeLog 1965 RMD160 a8df7f97a0f4464d5ddbaca9fc4849d9f25ac69b SHA1 07e0cf2fd50f6c1b6a7dc22bb8382a059e96c950 SHA256 5fc98fc375a82412c5ce68a3239dd990eb4021086eb6cf69f36e9ce2f144a255
-MISC metadata.xml 645 RMD160 7a451e3cfa444b90f65f9d50c1432bafbccc7f7a SHA1 02920189eaf0ceb030af0461a623eef4967bf14a SHA256 7e1d68801a760b2381ac5609fe23f90ee86623b4db0f78839c36aabed3e86d52
+EBUILD 389-ds-base-1.2.4.ebuild 2645 RMD160 483522b1926a95ca1b60d183aa8c8bb16ef6f094 SHA1 fd6849fa97c0ff79fe9b1046f279262732bbc0da SHA256 6753074934adbd669857711e3db6d7f384514f16e665f2e43d3dd32c1997e549
+MISC ChangeLog 2064 RMD160 62ddbdbcbdc787161e4a166ab5de09d1666712a7 SHA1 b5b67a8d0de68f17e71dd35e27503e77452d7160 SHA256 8e560983e2ce34543d8d164cb3ecc98c2ba5865b1944e6769c2276f6b462fc2a
+MISC metadata.xml 898 RMD160 283ed9b77a73fdac0bd215f7b0820da27541c3c5 SHA1 44728393c23fb6b0d1f9f251d13530935abfabad SHA256 1035e0e765c9c55e0b6df59b85c430e76b79264065b225bed76c9345b9b850a8
