@@ -2,10 +2,16 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  389-ds-base-1.2.4.ebuild:
+  syntax fix
+
   04 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +files/1.2.4/0001-configure.ac-genrtoo_brand.patch,
   +389-ds-base-1.2.4.ebuild:
   version bump
+
+*389-ds-base-1.2.4
 
   25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +files/1.2.2/configure.ac.patch, 389-ds-base-1.2.2.ebuild,
@@ -16,6 +22,8 @@
   +files/1.2.3/0001-configure.ac-genrtoo_brand.patch,
   389-ds-base-1.2.3.ebuild:
   add brand patch
+
+*389-ds-base-1.2.3
 
   25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   389-ds-base-1.2.2.ebuild, +389-ds-base-1.2.3.ebuild:
@@ -50,7 +58,6 @@
   -389-ds-base-1.2.1.ebuild:
   remove old ebuild
 
-*389-ds-base-1.2.1-r1 (15 Aug 2009)
 
   15 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> +files/bug435774.patch,
   +389-ds-base-1.2.1-r1.ebuild, +files/bug439829.patch, +files/dirsrv.confd,
